# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.247 2005/04/28 16:42:14 rocket Exp $

  28 Apr 2005; Eric Edgar <rocket@gentoo.org>
  livecd/cdtar/isolinux-2.13-cdtar.tar.bz2,
  livecd/cdtar/isolinux-2.13-memtest86+-cdtar.tar.bz2:
  updated isolinux-2.13 cdtars to have files under boot/ rather than isolinux/

  28 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage2_target.py:
  print warning message about deprecated use of cdfstype

  28 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/chroot-functions.sh:
  statically define genkernel location to eliminate which command failure if
  genkernel is not installed

  27 Apr 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  change the portage_overlay to an array so it always works

  27 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py:
  Fix exception handling to remove extraneous prints of None

  27 Apr 2005; Eric Edgar <rocket@gentoo.org> modules/stage4_target.py:
  Remove iso creation code from stage4

  27 Apr 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
  modules/generic_stage_target.py, modules/livecd_stage1_target.py,
  modules/livecd_stage2_target.py, modules/snapshot_target.py,
  targets/embedded/embedded-controller.sh, targets/grp/grp-controller.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/netboot/netboot-controller.sh,
  targets/stage1/stage1-controller.sh, targets/stage2/stage2-controller.sh,
  targets/stage3/stage3-controller.sh, targets/stage4/stage4-controller.sh,
  targets/support/bootloader-setup.sh, targets/support/chroot-functions.sh,
  targets/support/create-iso.sh, targets/support/kmerge.sh,
  targets/support/target_image_setup.sh,