@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.247 2005/04/28 16:42:14 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.248 2005/04/28 16:45:43 rocket Exp $
+
+  28 Apr 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Make purge operation a little less chatty, removed print statements
 
   28 Apr 2005; Eric Edgar <rocket@gentoo.org>
   livecd/cdtar/isolinux-2.13-cdtar.tar.bz2,
